syntax = "proto3";

package api.v1.user;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/KwokGH/kratos/api/v1/user;user";
option java_multiple_files = true;
option java_package = "api.v1.user";

service User {
	rpc Login (LoginReq) returns (LoginReply) {
		option (google.api.http) = {
			post: "/api/login",
			body: "*",
		};
	}
	rpc Register (RegisterReq) returns (RegisterReply) {
		option (google.api.http) = {
			post: "/api/register",
			body: "*",
		};
	}
}


message LoginReq {
	string phone =1 [(validate.rules).string.len = 11];
	string password =2 [(validate.rules).string = {min_len: 5, max_len: 100}];
}


message LoginReply {
	string token = 1;
}

message RegisterReq {
	string phone =1 [(validate.rules).string.len = 11];;
	string password =2 [(validate.rules).string = {min_len: 5, max_len: 100}];
	string nick_name = 3 [(validate.rules).string = {min_len: 1, max_len: 10}];
}

message RegisterReply {
	string user_id = 1;
}